# fr5_mujoco_env

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
scripts/: play_recording.py  play_scene.py
scripts/debugging/: inspect_recording.py  launch_mujoco_viewer.py
src/fr5_mujoco_env/: constants.py  controller.py  mujoco_env.py  simulation.py  teleop.py
src/fr5_mujoco_env/utils/: __init__.py  recorder.py  recording_viewer.py  xbox.py
tasks/: fr5_robot.xml  gripper_pgi.xml  plate.xml  scene.xml  table.xml
tasks/meshes/plate/: plate.stl
